# codereview-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  cli.py  ingest_repo.py  main.py  pyproject.toml
agent/: chat_agent.py  chat_state.py  context_agent.py  models.py  orchestrator.py  retry_agent.py  review_agent.py  state.py  tool_runner.py  tool_schemas.py  tools.py
codereview_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
db/: chat_store.py  connection.py  db_writer.py  schema.sql
routers/: webhook.py
services/: chunker.py  diff_parser.py  embedder.py  embeddings.py  github_auth.py  github_client.py  github_comments.py  llm_client.py  mmr.py  references.py  repo_access.py  retriever.py  review_prompt.py
